--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>TEST</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- LESS -->
+    <link href="css/style.less" rel="stylesheet/less" type="text/css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,11 +17,45 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <section id="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-3">
+                    <nav id="header-navigation">
+                        <div class="header-menu">
+                        <a href="#" title="All Menu" class="all-menu"><i class="fa fa-bars fa-2x"></i><h2>Tất cả Danh mục</h2></a>
+                        </div>
+                        <ul class="list-group">
+                          <li class="list-group-item">Cras justo odio</li>
+                          <li class="list-group-item">Dapibus ac facilisis in</li>
+                          <li class="list-group-item">Morbi leo risus</li>
+                          <li class="list-group-item">Porta ac consectetur ac</li>
+                          <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-lg-9 col-md-9">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+<!--
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    Hello
+                </div>
+            </div>
+        </div>
+    </section>
+-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/less.min.js" type="text/javascript"></script>
+    <script src="js/plugin.js"></script>
   </body>
 </html>
