--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
                         <a href="#" title="All Menu" class="all-menu"><i class="fa fa-bars fa-2x"></i><h2>Tất cả Danh mục</h2></a>
                         </div>
                         <ul class="list-group">
-                          <li class="list-group-item">Cras justo odio</li>
-                          <li class="list-group-item">Dapibus ac facilisis in</li>
-                          <li class="list-group-item">Morbi leo risus</li>
-                          <li class="list-group-item">Porta ac consectetur ac</li>
-                          <li class="list-group-item">Vestibulum at eros</li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-book"></i><span>Sách</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-beauty"></i><span>Làm Đẹp - Sức Khỏe</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-house"></i><span>Nhà Cửa Đời Sống</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-electric"></i><span>Điện Gia Dụng</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-accessories"></i><span>Phụ Kiện - Thiết Bị Số</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-camera"></i><span>Máy Ảnh - Quay Phim</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-mobile"></i><span>Điện Thoại - Máy Tính Bảng</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-toy"></i><span>Đồ Chơi - Quà Tặng</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-baby"></i><span>Mẹ &amp; Bé</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-stationary"></i><span>Thiết Bị Văn Phòng Phẩm</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-sport"></i><span>Thể Thao - Dã Ngoại</span><i class="fa fa-angle-right"></i></a></li>
                         </ul>
                     </nav>
                 </div>
@@ -38,19 +44,22 @@
                     
                 </div>
             </div>
+<!--			<div class="clearfix"></div>-->
         </div>
     </section>
-<!--
-    <section>
+    <section id="slideshow">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    Hello
+                <div class="col-md-12 home-slideshow-root">
+					<div class="home-slideshow">
+						<div class="swiper-slide">
+							<a href=""><img src="img/File-1443761511.jpg"></a>
+						</div>
+					</div>
                 </div>
             </div>
         </div>
     </section>
--->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
