--- a/index.html
+++ b/index.html
@@ -26,7 +26,71 @@
                         <a href="#" title="All Menu" class="all-menu"><i class="fa fa-bars fa-2x"></i><h2>Tất cả Danh mục</h2></a>
                         </div>
                         <ul class="list-group">
-							<li class="list-group-item"><a href="#"><i class="icon icon-book"></i><span>Sách</span><i class="fa fa-angle-right"></i></a></li>
+							<li class="list-group-item"><a href="#"><i class="icon icon-book"></i><span>Sách</span><i class="fa fa-angle-right"></i></a>
+								<div class="nav-sub" style="display: block;">
+								<ul>
+									<li>
+										<div class="nav-sub-list-box">
+											<h2>Sách Tiếng Việt nổi bật</h2>
+											<a href="http://tiki.vn/bestsellers/sach-truyen-tieng-viet.html">Sách bán chạy</a>
+											<a href="http://tiki.vn/new-products/sach-truyen-tieng-viet.html">Sách mới</a>
+											<a href="http://tiki.vn/dat-truoc/sach-truyen-tieng-viet.html">Sách đặt trước</a>
+											<a href="http://tiki.vn/sap-phat-hanh/sach-truyen-tieng-viet.html">Sách sắp phát hành</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/tuyen-tap/sach-hay-tiki-khuyen-doc.html">Sách Hay Tiki Khuyên Đọc</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/tuyen-tap/sach-theo-chu-de.html">Sách Theo Chủ Đề</a>
+											<a href="http://tiki.vn/san-pham-giam-gia/sach-truyen-tieng-viet.html">Sách giảm giá</a>
+										</div>
+										<div class="nav-sub-list-box">
+											<h2>Sách Tiếng Anh nổi bật</h2>
+											<a href="http://tiki.vn/bestsellers/sach-tieng-anh.html">Sách bán chạy</a>
+											<a href="http://tiki.vn/new-products/sach-tieng-anh.html">Sách mới</a>
+											<a href="http://tiki.vn/discounted-books/sach-tieng-anh.html">Sách giảm giá</a>
+											<a href="http://tiki.vn/dat-truoc/sach-tieng-anh.html">Sách đặt trước</a>
+											<a href="http://tiki.vn/sap-phat-hanh/sach-tieng-anh.html">Sách sắp phát hành</a>
+										</div>
+									</li>
+									<li>
+										<div class="nav-sub-list-box">
+											<a href="http://tiki.vn/sach-truyen-tieng-viet"><h2>Danh Mục</h2></a>
+											<a href="http://tiki.vn/sach-tieng-anh">Sách Tiếng Anh</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/sach-van-hoc.html">Sách Văn Học - Tiểu Thuyết</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/sach-kinh-te.html">Sách Kinh Tế</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/sach-ky-nang-song-dep.html">Sách Kỹ Năng Sống</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/ngoai-ngu-tu-dien.html">Sách Học Ngoại Ngữ - Từ Điển</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/sach-truyen-thieu-nhi.html">Sách Truyện Thiếu Nhi </a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/sach-thuong-thuc-doi-song.html">Sách Thường Thức - Đời Sống</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/truyen-tranh.html">Truyện Tranh, Manga, Comic</a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet/sach-giao-khoa/sach-giao-khoa-cac-cap.html">Sách Giáo Khoa <img style="margin-top: -13px;" src="http://tala.tikicdn.com/assets/img/hot.png"></a>
+											<a href="http://tiki.vn/sach-truyen-tieng-viet" class="all">Tất cả Danh Mục<i class="fa fa-caret-right"></i> </a>
+										</div>
+                    </li>
+                    <li>
+                        <div class="nav-sub-list-box">
+                            <a href="http://tiki.vn/cty-sach.html"><h2>Công ty phát hành</h2></a>
+                            <a href="http://tiki.vn/cty-sach/alphabooks.html">Alphabooks</a>
+                            <a href="http://tiki.vn/cty-sach/bach-viet.html">Bách Việt</a>
+                            <a href="http://tiki.vn/cty-sach/dinh-ti.html">Đinh Tị</a>
+                            <a href="http://tiki.vn/cty-sach/dong-a.html">Đông A</a>
+                            <a href="http://tiki.vn/cty-sach/first-news.html">First News</a>
+                            <a href="http://tiki.vn/cty-sach/nha-nam.html">Nhã Nam</a>
+                            <a href="http://tiki.vn/cty-sach/kim-dong.html">NXB Kim Đồng</a>
+                            <a href="http://tiki.vn/cty-sach/tre.html">NXB Trẻ</a>
+                            <a href="http://tiki.vn/cty-sach/phuong-nam.html">Phương Nam</a>
+                            <a href="http://tiki.vn/cty-sach/quang-van.html">Quảng văn</a>
+                            <a href="http://tiki.vn/cty-sach/tgm.html">TGM Books </a>
+                            <a href="http://tiki.vn/cty-sach/thai-ha.html">Thái Hà</a>
+                            <a href="http://tiki.vn/cty-sach/van-viet.html">Văn việt</a>
+                            <a href="http://tiki.vn/cty-sach.html" class="all">Tất cả  Công Ty Phát Hành<i class="fa fa-caret-right"></i> </a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="http://tiki.vn/sach-b2b?src=Home3_menu_sach" title="Tiki Bán Sỉ" target="_blank" onclick="ga('send','event','banner','Home3_menu_sach','Tiki Bán Sỉ');">
+    <img src="http://tikicdn.com/media/custom/banners/File-1415175856.jpg" alt="Tiki Bán Sỉ">
+</a>
+                    </li>
+                </ul>
+            </div>
+							</li>
 							<li class="list-group-item"><a href="#"><i class="icon icon-beauty"></i><span>Làm Đẹp - Sức Khỏe</span><i class="fa fa-angle-right"></i></a></li>
 							<li class="list-group-item"><a href="#"><i class="icon icon-house"></i><span>Nhà Cửa Đời Sống</span><i class="fa fa-angle-right"></i></a></li>
 							<li class="list-group-item"><a href="#"><i class="icon icon-electric"></i><span>Điện Gia Dụng</span><i class="fa fa-angle-right"></i></a></li>
@@ -66,5 +130,17 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
     <script src="js/plugin.js"></script>
+	<script>
+		$(document).ready(function() {
+			$('h2').tiki({
+				text : 'Salut, le monde!',
+				color : '#005dff',
+				fontStyle : 'italic',
+				complete: function() {
+					alert('done');
+				}
+			});
+		});
+	</script>
   </body>
 </html>
