--- a/index.html
+++ b/index.html
@@ -775,11 +775,33 @@
             <div class="row">
                 <div class="col-md-12 home-slideshow-root">
 					<div class="home-slideshow">
-						<div class="swiper-container-photo">
+						<div class="swiper-container-photo swiper-container-vertical">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
-									<a href=""><img src="img/File-1443761511.jpg"></a>
+									<a href="#"><img src="img/File-1444404482.jpg"></a>
 								</div>
+                                <div class="swiper-slide">
+									<a href="#"><img src="img/File-1444188874.jpg"></a>
+								</div>
+                                <div class="swiper-slide">
+									<a href="#"><img src="img/File-1444616437.jpg"></a>
+								</div>
+                                <div class="swiper-slide">
+									<a href="#"><img src="img/File-1444188874.jpg"></a>
+								</div>
+                                <div class="swiper-slide">
+									<a href="#"><img src="img/File-1444271356.jpg"></a>
+								</div>
+                                <div class="swiper-slide">
+									<a href="#"><img src="img/File-1442919759.jpg"></a>
+								</div>
+                                <div class="swiper-slide">
+									<a href="#"><img src="img/File-1441680957.jpg"></a>
+								</div>
+                                <div class="swiper-slide">
+									<a href="#"><img src="img/File-1444128544.jpg"></a>
+								</div>
+                                
 							</div>
 						</div>
 						<div class="swiper-container ">
@@ -848,14 +870,7 @@
     <script src="js/plugin.js"></script>
 	<script>
 		$(document).ready(function() {
-			$('h2').tiki({
-				text : 'Salut, le monde!',
-				color : '#005dff',
-				fontStyle : 'italic',
-				complete: function() {
-					alert('done');
-				}
-			});
+			$('h2').tiki();
 		});
 	</script>
   </body>
