update highlight nav

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
 						</div>
 						<div class="swiper-container ">
 							<div class="swiper-wrapper">
-                            <div class="swiper-slide">
+                            <div class="swiper-slide active-nav">
 							<p class="image"><img src="/img/1.jpg" height="36" width="36" alt=""></p>
 							<a target="_blank" href="#" title="">Ngày 10-10 - Giảm thêm 10%</a>
 							<span>Điện thoại - Máy tính...</span>
@@ -830,19 +830,19 @@
 							<span>Mừng ngày phụ nữ Việt Nam</span>
 							<div class="clearboth"></div>
 						</div>
-									<div class="swiper-slide swiper-slide-prev">
+									<div class="swiper-slide">
 							<p class="image"><img src="/img/5.jpg" height="36" width="36" alt=""></p>
 							<a target="_blank" href="#" title="Bộ bình ly Luminarc">Bộ bình ly Luminarc</a>
 							<span>Giá chỉ 119.000đ</span>
 							<div class="clearboth"></div>
 						</div>
-									<div class="swiper-slide active-nav swiper-slide-active">
+									<div class="swiper-slide">
 							<p class="image"><img src="/img/6.jpg" height="36" width="36" alt=""></p>
 							<a target="_blank" href="#" title="WD 1TB Metal Sang Chảnh">WD 1TB Metal Sang Chảnh</a>
 							<span>Thứ 2, 3 Giảm 300.000đ</span>
 							<div class="clearboth"></div>
 						</div>
-									<div class="swiper-slide swiper-slide-next">
+									<div class="swiper-slide">
 							<p class="image"><img src="/img/7.jpg" height="36" width="36" alt=""></p>
 							<a target="_blank" href="#" title="Tai nghe Inkd">Tai nghe Inkd</a>
 							<span>Giảm tới 45%, Bảo hành...</span>
